--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,13 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
+.env.development
 .env.test.local
 .env.production.local
 .env.local
+.env.production
+.env.prod
+
 
 # temp directory
 .temp
