--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
